# ChromaQuant

./: .pre-commit-config.yaml  .readthedocs.yaml  AutoFpmMatch.py  AutoQuant.spec  AutoQuantification.py  CODE_OF_CONDUCT.md  ChromaQuantApp.spec  ChromaQuantBinary.spec  ChromaQuantBinarySave.spec  LICENSE.txt  LICENSES_bundled.txt  QuantUI.py  Quantification.py  README.md  bundleMacApp.sh  bundleMacBinary.sh  fpm_match.py  properties_Windows.json  pyproject.toml  requirements.txt
.github/workflows/: cq-pypi.yaml  cq-test.yaml
AutoQuantWindows/_internal/: AutoFpmMatch.py  QuantUI.py  properties.json
buildWindows/AutoQuant/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-AutoQuant.txt  xref-AutoQuant.html
chromatools/: AutoQuantification.py  QuantUPP.py  __init__.py  handleDirectories.py
data/: MBPR038_02_INFO.json  MBPR041_01_Breakdown_121823.xlsx
data/LOHC001_01/: LOHC001_01_LQ1_MS_SPEC.csv  LOHC001_01_LQ1_UA_Comp_UPP.csv
data/LOHC002_01/: LOHC002_01_LQ1_MS_SPEC.csv  LOHC002_01_LQ1_UA_Comp_UPP.csv
data/LOHC003_01/: LOHC003_01_GS1_MS_SPEC.csv  LOHC003_01_GS1_UA_Comp_UPP.csv  LOHC003_01_GS2_FID_SPEC.CSV  LOHC003_01_GS2_TCD_CSO.csv  LOHC003_01_GS2_TCD_SPEC.CSV  LOHC003_01_LQ1_FID_CSO.csv  LOHC003_01_LQ1_FID_SPEC.CSV  LOHC003_01_LQ1_MS_SPEC.csv  LOHC003_01_LQ1_UA_Comp_UPP.csv
data/LOHC007_01/: LOHC007_01_GS1_MS_SPEC.csv  LOHC007_01_GS1_UA_Comp_UPP.csv  LOHC007_01_LQ1_FID_CSO.csv  LOHC007_01_LQ1_FID_SPEC.CSV  LOHC007_01_LQ1_MS_SPEC.csv  LOHC007_01_LQ1_UA_Comp_UPP.csv
data/LOHC008_01/: LOHC008_01_GS1_MS_SPEC.csv  LOHC008_01_GS2_FID_SPEC.CSV
data/LOHC009_01/: LOHC009_01_ManualBreakdown.xlsx
data/LOHC010_01/: LOHC010_01_ManualBreakdown.xlsx
data/LOHC011_01/: LOHC011_01_ManualBreakdown.xlsx
data/LOHC012_01/: LOHC012_01_GS2_FID_SPEC.CSV
data/MBPR038_01/: MBPR038_01_GS1_UA_Comp_UPP.csv  MBPR038_01_GS2_FID_Molmass.csv  MBPR038_01_GS2_FID_SPEC.CSV  MBPR038_01_GS2_FIDpMS.csv  MBPR038_01_GS2_TCD_SPEC.CSV  MBPR038_01_INFO.json  MBPR038_01_LQ1_FID_CSO.csv  MBPR038_01_LQ1_FID_SPEC.CSV  MBPR038_01_LQ1_MS_SPEC.CSV  MBPR038_01_LQ1_UA_Comp_UPP.csv
data/MBPR039_01/: MBPR039_01_GS1_MS_SPEC.csv  MBPR039_01_GS1_UA_Comp_UPP.csv  MBPR039_01_GS2_FID_SPEC.CSV  MBPR039_01_GS2_FIDpMS.csv  MBPR039_01_GS2_TCD_CSO.csv  MBPR039_01_GS2_TCD_SPEC.CSV  MBPR039_01_INFO.json  MBPR039_01_LQ1_FID_CSO.csv  MBPR039_01_LQ1_FID_SPEC.CSV  MBPR039_01_LQ1_FIDpMS.csv  MBPR039_01_LQ1_MS_SPEC.CSV  MBPR039_01_LQ1_UA_Comp_UPP.csv
data/MBPR040_01/: MBPR040_01_GS1_MS_SPEC.csv  MBPR040_01_GS1_UA_Comp_UPP.csv  MBPR040_01_GS2_FID_SPEC.CSV  MBPR040_01_GS2_FIDpMS.csv  MBPR040_01_GS2_TCD_CSO.csv  MBPR040_01_GS2_TCD_SPEC.CSV  MBPR040_01_INFO.json  MBPR040_01_LQ1_FID_CSO.csv  MBPR040_01_LQ1_FIDpMS.csv  MBPR040_01_LQ1_MS_SPEC.CSV  MBPR040_01_LQ1_UA_Comp_UPP.csv
data/MBPR041_01/: MBPR041_01_GS1_MS_SPEC.csv  MBPR041_01_GS1_UA_Comp_UPP.csv  MBPR041_01_GS2_FID_SPEC.CSV  MBPR041_01_GS2_FIDpMS.csv  MBPR041_01_GS2_TCD_CSO.csv  MBPR041_01_GS2_TCD_SPEC.CSV  MBPR041_01_INFO.json  MBPR041_01_LQ1_FID_CSO.csv  MBPR041_01_LQ1_FID_SPEC.CSV  MBPR041_01_LQ1_FIDpMS.csv  MBPR041_01_LQ1_MS_SPEC.csv  MBPR041_01_LQ1_UA_Comp_UPP.csv
docs/: chromaquant.data.rst  chromaquant.formula.rst  chromaquant.match.rst  chromaquant.results.rst  chromaquant.rst  chromaquant.utils.rst  conf.py  index.rst  modules.rst  requirements.txt
docs/config/: conf.py
examples/: petroleum_mixture.py
images/: ChromaQuantIcon.icns  ChromaQuantIcon.tiff
resources/: KnownCompoundsAuto.xlsx  analysis-config.json  smilePairs.csv
response-factors/: LRF_07-24-24.xlsx  LRF_7-24-24.xlsx  Liquid Response Factors.xlsx  TCDRF.csv  gasFIDRF.csv
src/: __init__.py  __main__.py
(+403 files in other folders)
