[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chromaquant"
dynamic = ["version"]
description = "Analytical platform for gas chromatography"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.14"
authors = [{name = "Julia Hancock"},]
keywords = [
	"Analysis",
	"Chromatography",
	"Mass Spectrometry",
	"Analytical Chemistry",
	"Complex Hydrocarbon Analysis",
]
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: BSD License",
	"Natural Language :: English",
	"Topic :: Scientific/Engineering :: Chemistry",
	"Environment :: MacOS X",
]
dependencies = [
	"pandas~=2.3.3",
	"molmass~=2025.12.12",
	"numpy~=2.4.0",
	"chemformula~=1.5.1",
	"scipy~=1.16.3",
	"XlsxWriter~=3.2.9",
	"openpyxl~=3.1.5",
]

[project.urls]
Repository = "https://github.com/JnliaH/ChromaQuant"

[tool.hatch.build.targets.sdist]
include	= [
	"/src",
	"CONTRIBUTING.md",
	"README.md",
	"LICENSE.txt",
	"LICENSES_bundled.txt",
]

exclude = [
	"/__pycache__",
	"/dist",
	"/.venv",
	"/.conda",

]

[tool.hatch.version]
path = "src/chromaquant/__main__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chromaquant"]

[pytest]
addopts = ["--import-mode=importlib"]
