[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "chromaquant"
dynamic = ["version"]
description = "Analytical platform for chromatography data"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11"
authors = [{name = "Julia Hancock"},]
keywords = [
	"Analysis",
	"Chromatography",
	"Mass Spectrometry",
	"Analytical Chemistry",
	"Complex Hydrocarbon Analysis",
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: BSD License",
	"Natural Language :: English",
	"Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
	"pandas~=2.3.3",
	"molmass~=2025.12.12",
	"chemformula~=1.5.1",
	"XlsxWriter~=3.2.9",
	"openpyxl~=3.1.5"
]

[project.urls]
Repository = "https://github.com/JnliaH/ChromaQuant"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chromaquant"]

[tool.git-changelog]
bump = "patch"
convention = "angular"
filter-commits = "v0.5.1..."
include_all = "true"

[pytest]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
